[package]
name = "ma-core"
version = "0.2.0"
edition = "2021"
rust-version = "1.95"
description = "DIDComm service library: inboxes, outboxes, DID document publishing, and transport abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bahner/ma-core"
documentation = "https://docs.rs/ma-core"
readme = "README.md"
keywords = ["did", "didcomm", "ipfs", "messaging"]
categories = ["network-programming", "authentication"]

[features]
default = ["kubo"]
kubo = []

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1.11.1"
did-ma = { package = "ma-did", version = "0.3" }
iroh = { version = "0.97.0" }
iroh-gossip = { version = "0.97.0" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1.52", features = ["io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }
