[package]
name = "ma-core"
version = "0.7.1"
edition = "2021"
rust-version = "1.95"
description = "DIDComm service library: inboxes, outboxes, DID document publishing, and transport abstraction"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bahner/ma-core"
documentation = "https://docs.rs/ma-core"
readme = "README.md"
keywords = ["did", "didcomm", "ipfs", "messaging"]
categories = ["network-programming", "authentication"]

[features]
default = ["iroh", "gossip"]
kubo = []
iroh = ["dep:iroh"]
gossip = ["iroh", "dep:iroh-gossip"]
acl = ["dep:cid", "dep:serde_yaml"]
config = [
    "dep:argon2",
    "dep:chacha20poly1305",
    "dep:clap",
    "dep:directories",
    "dep:serde_yaml",
    "dep:tracing-subscriber",
    "dep:zeroize",
]

[dependencies]
anyhow = "1.0"
argon2 = { version = "0.5", optional = true }
async-trait = "0.1"
base64 = "0.22"
blake3 = "1"
bytes = "1.11.1"
cid = { version = "0.11.3", features = ["serde"], optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
clap = { version = "4", features = ["derive", "env"], optional = true }
did-ma = { package = "ma-did", version = "^0.5" }
directories = { version = "5", optional = true }
iroh = { version = "^0.98", default-features = false, features = ["tls-ring"], optional = true }
iroh-gossip = { version = "^0.98", default-features = false, features = ["net"], optional = true }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9", optional = true }
thiserror = "2"
tokio = { version = "1.52", features = ["io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
zeroize = { version = "1", features = ["derive"], optional = true }
iroh-base = "^0.98"

[dev-dependencies]
tokio = { version = "1.52", features = ["macros", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
